2005-11-03  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py:  Default to SELINUX_ENFORCING.

2005-11-01  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Bump version.

	* pykickstart/parser.py (KickstartHandlers.doVnc):  --connect is not
	required as it may be provided to anaconda on the command line
	(#172192).
	(KickstartHandlers.doNetwork):  --onboot takes no options.
	* pykickstart/writer.py (doFirewall):  Remove extra spaces.  Write out
	--<service> options if ports are set.

2005-10-28  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py (KickstartWriter.doClearPart):  Fix --all
	parameter.

2005-10-28  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Bump version.

	* docs/programmers-guide:  Add documentation for error reporting.
	* pykickstart/parser.py:  Add --resolvedeps and --includedeps as
	deprecated options to %packages.  Pass line number to handlePackageHdr
	and handleScriptHdr.

2005-10-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Bump version.

	* pykickstart/parser.py:  Report the line number on exceptions.
	* validator/ksvalidator:  Added a stand-alone program to validate
	kickstart files.

2005-10-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Bump version.

2005-10-18  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py:  Correct deprecated attribute so warnings are
	thrown when a deprecated option is seen, not when it's defined.

2005-10-17  Chris Lumens  <clumens@redhat.com>

	* docs/programmers-guide:  Added documentation for extending and
	programming with pykickstart.

2005-10-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Correct python lib directory on 64-bit archs
	(#170621).  Bump build.

2005-10-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart/constants.py:  Add types for scripts.
	* pykickstart/data.py:  Collapse scripts into a single list.
	* pykickstart/parser.py:  Likewise.  Also, fix script printing.